[package]
name = "xfetch"
version = "3.4.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uptime_lib = "0.3.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.optimized-build]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
