[package]
name = "exfetch"
version = "0.9.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(unix)'.dependencies]
sysinfo_dot_h = "0.2.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

