[package]
name = "exfetch"
version = "0.9.0"
edition = "2021"

[dependencies]
# tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "fs"] }
tokio = { version = "1.38", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
sysinfo_dot_h = "0.1.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
